--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,10 @@
       <version>6.5</version>
     </dependency>
 
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-resteasy-jsonb</artifactId>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
